--- a/calibration_templates/Validate_calibration_stationary.ipynb
+++ b/calibration_templates/Validate_calibration_stationary.ipynb
@@ -954,6 +954,217 @@
     "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)\n",
     "evaluation_maps"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Switch focus to calibration\n",
+    "\n",
+    "Target datastructure is\n",
+    "\n",
+    "```\n",
+    "- android\n",
+    "    - high_accuracy_stationary\n",
+    "        - high_accuracy_stationary_1\n",
+    "            - ucb-sdb-android-1\n",
+    "                - battery_df\n",
+    "                - location_df\n",
+    "            - ucb-sdb-android-2\n",
+    "            - ucb-sdb-android-3\n",
+    "            - ucb-sdb-android-4\n",
+    "       - high_accuracy_stationary_2\n",
+    "            - ucb-sdb-android-1\n",
+    "                - battery_df\n",
+    "                - location_df\n",
+    "            - ucb-sdb-android-2\n",
+    "            - ucb-sdb-android-3\n",
+    "            - ucb-sdb-android-4\n",
+    "       - ....\n",
+    "    - medium_accuracy_stationary \n",
+    "        - medium_accuracy_stationary_1\n",
+    "            - ucb-sdb-android-1\n",
+    "                - battery_df\n",
+    "                - location_df\n",
+    "            - ucb-sdb-android-2\n",
+    "            - ucb-sdb-android-3\n",
+    "            - ucb-sdb-android-4\n",
+    "       - medium_accuracy_stationary_2\n",
+    "            - ucb-sdb-android-1\n",
+    "                - battery_df\n",
+    "                - location_df\n",
+    "            - ucb-sdb-android-2\n",
+    "            - ucb-sdb-android-3\n",
+    "            - ucb-sdb-android-4\n",
+    "      - ....\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_comparison_regimes():\n",
+    "    comparison_map = {}\n",
+    "    for phoneOS, phone_map in eval_transitions.items(): # android, ios\n",
+    "        print(\"Processing data for %s phones\" % phoneOS)\n",
+    "        comparison_map[phoneOS] = {}\n",
+    "        for phone_label, phone_data_map in phone_map.items(): # ucb-sdb-android-1\n",
+    "            for r in phone_data_map[\"calibration_ranges\"]:\n",
+    "                trip_type = \"_\".join(r[\"trip_id\"].split(\"_\")[:-1])\n",
+    "                # print(trip_type)\n",
+    "                if trip_type not in comparison_map[phoneOS]:\n",
+    "                    comparison_map[phoneOS][trip_type] = {}\n",
+    "                if r[\"trip_id\"] not in comparison_map[phoneOS][trip_type]:\n",
+    "                    comparison_map[phoneOS][trip_type][r[\"trip_id\"]] = {}\n",
+    "                comparison_map[phoneOS][trip_type][r[\"trip_id\"]][phone_label] = r\n",
+    "    return comparison_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comparison_map = find_comparison_regimes()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Per-regime battery and location visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_per_trip_evaluation_curves(fig, nRows, phone_map):\n",
+    "    i = 0\n",
+    "    for curr_calibrate, curr_calibrate_trip_map in phone_map.items(): # high_accuracy_train_AO\n",
+    "        ax = fig.add_subplot(nRows, 2, i+1, title=curr_calibrate)\n",
+    "        i = i+1\n",
+    "        for curr_cal_run, cal_phone_map in curr_calibrate_trip_map.items():\n",
+    "            for phone_label, phone_data_map in cal_phone_map.items():\n",
+    "                # print(\"Extracting data for %s from map with keys %s\" % (phone_label, phone_data_map.keys()))\n",
+    "                battery_df = phone_data_map[\"battery_df\"]\n",
+    "                if len(battery_df) > 0:\n",
+    "                    battery_df.plot(x=\"hr\", y=\"battery_level_pct\", ax=ax, label=\"%s_%s\" % (curr_cal_run.split(\"_\")[-1], phone_label), ylim=(0,100), sharey=True)\n",
+    "                else:\n",
+    "                    print(\"no battery data found for %s %s, skipping\" % (curr_eval, curr_eval_trip_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(ifig, ax) = plt.subplots(figsize=(16,16),nrows=0,ncols=0)\n",
+    "exp_plot_counts = len(comparison_map[\"android\"])\n",
+    "print(exp_plot_counts)\n",
+    "nRows = get_row_count(exp_plot_counts, 2)\n",
+    "print(nRows)\n",
+    "plot_per_trip_evaluation_curves(ifig, nRows, comparison_map[\"android\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(ifig, ax) = plt.subplots(figsize=(16,16),nrows=0,ncols=0)\n",
+    "exp_plot_counts = len(comparison_map[\"ios\"])\n",
+    "print(exp_plot_counts)\n",
+    "nRows = get_row_count(exp_plot_counts, 2)\n",
+    "print(nRows)\n",
+    "plot_per_trip_evaluation_curves(ifig, nRows, comparison_map[\"ios\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_per_trip_map_list():\n",
+    "    map_list = []\n",
+    "    color_list = ['blue', 'red', 'purple', 'orange']\n",
+    "    for phoneOS, phone_map in comparison_map.items():\n",
+    "        print(\"Processing data for %s phones\" % phoneOS)\n",
+    "        for curr_calibrate, curr_calibrate_trip_map in phone_map.items():\n",
+    "            curr_map = folium.Map()\n",
+    "            all_points = []\n",
+    "            for curr_cal_run, cal_phone_map in curr_calibrate_trip_map.items():\n",
+    "                for i, (phone_label, phone_data_map) in enumerate(cal_phone_map.items()):\n",
+    "                    location_df = phone_data_map[\"location_df\"]\n",
+    "                    latlng_route_coords = list(zip(location_df.latitude, location_df.longitude))\n",
+    "                    all_points.extend(latlng_route_coords)\n",
+    "                    # print(latlng_route_coords[0:10])\n",
+    "                    if len(latlng_route_coords) > 0:\n",
+    "                        print(\"Processing %s, %s, found %d locations, adding to map\" %\n",
+    "                            (curr_calibrate, phone_label, len(latlng_route_coords)))\n",
+    "                        pl = folium.PolyLine(latlng_route_coords,\n",
+    "                            popup=\"%s\" % (phone_label), color=color_list[i])\n",
+    "                        pl.add_to(curr_map)\n",
+    "                    else:\n",
+    "                        print(\"Processing %s, %s, found %d locations, skipping\" %\n",
+    "                            (curr_calibrate, phone_label, len(latlng_route_coords)))\n",
+    "            curr_bounds = ful.get_bounds(all_points)\n",
+    "            print(curr_bounds)\n",
+    "            top_lat = curr_bounds[0][0]\n",
+    "            mid_lng = (curr_bounds[0][1] + curr_bounds[1][1])/2\n",
+    "            print(\"for trip %s with %d points, midpoint = %s, %s, plotting at %s, %s\" %\n",
+    "                    (curr_calibrate, len(all_points), top_lat,mid_lng, top_lat, mid_lng))\n",
+    "            folium.map.Marker(\n",
+    "                [top_lat, mid_lng],\n",
+    "                icon=fof.DivIcon(\n",
+    "                    icon_size=(200,36),\n",
+    "                    html='<div style=\"font-size: 12pt; color: green;\">%s: %s</div>' % (phoneOS, curr_calibrate))\n",
+    "            ).add_to(curr_map)\n",
+    "            curr_map.fit_bounds(pl.get_bounds())\n",
+    "            map_list.append(curr_map)\n",
+    "    return map_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ha_map_list = get_per_trip_map_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows = get_row_count(len(ha_map_list), 2)\n",
+    "print(rows)\n",
+    "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
+    "for i, curr_map in enumerate(ha_map_list):\n",
+    "    # print(\"Adding map %s at %d\" % (curr_map, i))\n",
+    "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)\n",
+    "evaluation_maps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
