Port over the validation functionality to the emeval code
+ Add invocations to the new code in the example notebook
+ Add text, observations and issues

--- a/example_visualization_SFBA_first_failed_experiment.ipynb
+++ b/example_visualization_SFBA_first_failed_experiment.ipynb
@@ -132,9 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pv_ca_only.validate()"
@@ -143,13 +141,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "evt3 = eiev.EvaluationView()\n",
     "evt3.from_view_single_run(pvt3, \"\")\n",
+    "evt3.from_view_eval_trips(pvt3, \"\", \"\")\n",
     "ev_ca_only = eiev.EvaluationView()\n",
     "ev_ca_only.from_view_multiple_runs(pv_ca_only, \"\")"
    ]
@@ -158,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now for the results (phone view)!"
+    "## Now for the results (calibration, phone view)!"
    ]
   },
   {
@@ -176,7 +173,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=2, nrows=1, figsize=(25,6))\n",
@@ -216,7 +215,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
@@ -243,7 +244,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "(ifig, ax) = plt.subplots(figsize=(12,3), nrows=0, ncols=0)\n",
@@ -264,7 +267,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
@@ -299,7 +304,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "count_df = ezpv.get_count_df(pv_ca_only); count_df"
@@ -308,7 +315,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "(ifig, ax) = plt.subplots(nrows=1, ncols=3, figsize=(16,8))\n",
@@ -341,7 +350,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "count_df = ezpv.get_count_df(pvt3); count_df.filter(like=\"AO\")"
@@ -350,7 +361,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "(ifig, ax) = plt.subplots(nrows=1, ncols=2, figsize=(16,8), sharey=True)\n",
@@ -401,7 +414,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "android_density_df = ezpv.get_location_density_df(pvt3.map()[\"android\"])\n",
@@ -451,9 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "evaluation_maps"
@@ -474,7 +487,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "ha_map_list = ezpv.get_map_list(pvt3, \"calibration\", \"AO\")\n",
@@ -497,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now for the results (evaluation view)!\n",
+    "## Now for the results (calibration, evaluation view)!\n",
     "\n",
     "### Trajectory matching\n",
     "\n",
@@ -542,11 +557,143 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "(ifig, ax) = plt.subplots(figsize=(16,6),nrows=0,ncols=0)\n",
-    "ezev.plot_separate_power_drain_multiple_runs(ifig, 3, ev_ca_only.map()[\"android\"], \"\")"
+    "ezev.plot_separate_power_drain_multiple_runs(ifig, 3, ev_ca_only.map(\"calibration\")[\"android\"], \"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now for the results (evaluation, evaluation view)!\n",
+    "\n",
+    "### Trajectory matching\n",
+    "\n",
+    "Finally, we get to the evaluation, in which we run different regimes across the different phones. We also have pre-determined ground truth for the trips. Since our entire goal is to compare the trips against each other, we will go directly to the evaluation view.\n",
+    "\n",
+    "\n",
+    "##### Issue #1: Tracking not turned off for the power control\n",
+    "\n",
+    "We can see that the power control also has location entries. This is because, even in the case of the power control, although we were setting the accuracy to the lowest possible and also sampling at a very low rate, we were not turning tracking off. We need to fix this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evt3.map(\"evaluation\")[\"android\"][\"HAHFDC v/s HAMFDC\"][\"short_walk_suburb\"][\"power_control\"][\"location_df\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Other observations include:\n",
+    "- The trajectory lines all match up pretty well, but that is not surprising since this was a high accuracy v/s high accuracy comparison, with only the filter being different\n",
+    "- The android evaluation phones ran out of battery before the second set of trips, so we only have the accuracy control for the `short_car_suburb` and `short_car_suburb_freeway`\n",
+    "- There is a clear zigzag in the android `short_bike_suburb` case\n",
+    "- The gap between the actual start of the trip and the detected start of the trip is much larger on iOS (~ 3-4 blocks) than android (~ 1-2 blocks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_list = ezev.get_map_list_eval_trips(evt3, \"evaluation\", \"AO\")\n",
+    "rows = ezpv.get_row_count(len(map_list), 2)\n",
+    "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
+    "for i, curr_map in enumerate(map_list):\n",
+    "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation_maps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Investigating android evaluation power drain\n",
+    "\n",
+    "The android evaluation power drain is surprising. We would expect power drain of the evaluation (which duty cycles the sensing) to be much lower than the accuracy control, which senses continuously. However, both the evaluation phones ran out of battery before the second trip, and the accuracy control did not. Let's verify this from the battery drain.\n",
+    "\n",
+    "We know that individual trip power drains will not tell us much because of the short durations. But the range-specific tracking should have some values...\n",
+    "\n",
+    "Aha! We can see that the duty cycling works as expected on iOS. The power drain of both regimes is almost identical to the power control, although we would expect the power control to get even lower when we actually stop tracking. However, on android, the evaluation regimes are in fact almost identical and with a much higher drain than the accuracy control."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
+    "\n",
+    "ezpv.plot_all_power_drain(ios_ax, pvt3.map()[\"ios\"], \"evaluation\", \"\")\n",
+    "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=1)\n",
+    "ezpv.plot_all_power_drain(android_ax, pvt3.map()[\"android\"], \"evaluation\", \"\")\n",
+    "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Issue #1: Milliseconds?\n",
+    "\n",
+    "Investigating this further by viewing the logs on the phone, we realize that we configure the android filter_time with the value of the filter directly. e.g. if filter = 1, then filter_time = 1. However, the API expects the time in milliseconds, so we are effectively setting this to 1 millisecond, not one second. Since the minimum filter_time is 1 second, this ensures that:\n",
+    "- we get data every second in all the regimes (see plots below)\n",
+    "- the HAHFDC and HAMFDC are effectively the same\n",
+    "- the number of entries that we need to find before we detect the trip end is in the tens of thousands. We don't actually achieve this number, so we keep sensing anyway, so we never actually duty cycle (see transition list below)\n",
+    "\n",
+    "But why are they **worse** than the accuracy control? Given that the sensing is largely identical, this **must be** due to the additional processing of iterating over all the entries to determine whether the trip has ended. So there really does appear to be a tradeoff between lower sensing and more local computation in the duty cycling case, specially for CPU-hungry phones. We might want to experiment further with this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_eval_range = evt3.map(\"evaluation\")[\"android\"][\"HAHFDC v/s HAMFDC\"]\n",
+    "(ifig, ax_list) = plt.subplots(ncols=3, nrows=1, figsize=(12,4))\n",
+    "\n",
+    "for i, (regime, regime_map) in enumerate(test_eval_range[\"short_walk_suburb\"].items()):\n",
+    "    if i == 3:\n",
+    "        continue\n",
+    "    regime_map[\"location_df\"].ts.diff().hist(ax=ax_list[i], label=regime)\n",
+    "\n",
+    "    ax_list[i].set_title(regime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arrow\n",
+    "\n",
+    "test_transition_phone = \"ucb-sdb-android-2\"\n",
+    "test_eval_range = pvt3.map()[\"android\"][test_transition_phone][\"evaluation_ranges\"][0]\n",
+    "transition_entries = pvt3.spec_details.retrieve_data_from_server(test_transition_phone, [\"statemachine/transition\"], test_eval_range[\"start_ts\"], test_eval_range[\"end_ts\"])\n",
+    "print(\"\\n\".join([str((t[\"data\"][\"transition\"], t[\"data\"][\"ts\"], arrow.get(t[\"data\"][\"ts\"]).to(pvt3.spec_details.eval_tz))) for t in transition_entries]))"
    ]
   },
   {
