add the motion activity checks to the previous experiment as well
+ add generated outputs as well

--- a/example_visualization_SFBA_first_failed_experiment.ipynb
+++ b/example_visualization_SFBA_first_failed_experiment.ipynb
@@ -697,6 +697,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking the motion activity\n",
+    "\n",
+    "In addition to location data, we also read the motion_activity data from the closed source phone APIs. Let's quickly check how accurate the raw motion activity is.\n",
+    "\n",
+    "The medium accuracy runs seem to be much more noisy wrt motion activity transitions. We should really not get a lot of transitions since we essentially took various trains for the entire route. The high accuracy sensing seems to be largely stable, except for one extraneous transition in the middle of the `ucb-sdb-ios-1` run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(ifig, ax) = plt.subplots(nrows=2, ncols=2, figsize=(12,8), sharex=True)\n",
+    "ezpv.display_unprocessed_android_activity_transitions(pvt3, ax[0][0], \"calibration\", \"medium_accuracy_train_AO\")\n",
+    "ezpv.display_unprocessed_android_activity_transitions(pvt3, ax[0][1], \"calibration\", \"high_accuracy_train_AO\")\n",
+    "ezpv.display_unprocessed_ios_activity_transitions(pvt3, ax[1][0], \"calibration\", \"medium_accuracy_train_AO\")\n",
+    "ezpv.display_unprocessed_ios_activity_transitions(pvt3, ax[1][1], \"calibration\", \"high_accuracy_train_AO\")\n",
+    "plt.legend()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
