Support public transit trips
Add support in `autofill_eval_spec.py` for public transit trips and trips
specified through a series of lat/lng points instead of node ids. Public
transit trips are still unimodal, but a sequence of trips can be used to
represent multi-modal travel.

Also included:
- a sample spec that uses multiple unimodal trips to represent multi-modal
  trips to and from Berkeley
- an ipython notebook illustrating the code to convert a relation to a set of points

--- a/spec_creation/coordinate_autofill_experiments/Evaluation_Spec_Experiments_OSM_Overpass.ipynb
+++ b/spec_creation/coordinate_autofill_experiments/Evaluation_Spec_Experiments_OSM_Overpass.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convert a list of nodes defining a route to a set of coordinates"
+    "### Convert a list of relations defining a route to a set of coordinates"
    ]
   },
   {
@@ -46,6 +46,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import folium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "osm = osmapi.OsmApi()"
    ]
   },
@@ -56,7 +65,216 @@
    "outputs": [],
    "source": [
     "# Get a node\n",
-    "osm.NodeGet(6426793216)"
+    "relation_details = osm.RelationGet(2851613); relation_details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Porting the perl script at https://wiki.openstreetmap.org/wiki/Relations/Relations_to_GPX\n",
+    "# to python\n",
+    "def get_way_list(relation_details):\n",
+    "    wl = []\n",
+    "    for member in relation_details[\"member\"]:\n",
+    "        # print(member[\"ref\"], member[\"type\"])\n",
+    "        assert member[\"type\"] != \"relation\", \"This is a parent relation for child %d, expecting only child relations\" % member[\"ref\"]\n",
+    "        if member[\"type\"] == \"way\" and member[\"role\"] != \"platform\":\n",
+    "            wl.append(member[\"ref\"])\n",
+    "    return wl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# way details is an array of n-1 node entries followed by a way entry\n",
+    "# the way entry has an \"nd\" field which is an array of node ids in the correct order\n",
+    "# the n-1 node entries are not necessarily in the correct order but provide the id -> lat,lng mapping\n",
+    "def get_coords_for_way(wid, prev_last_node=-1):\n",
+    "    lat = {}\n",
+    "    lon = {}\n",
+    "    coords_list = []\n",
+    "    way_details = osm.WayFull(wid)\n",
+    "    # print(\"Processing way %d with %d nodes\" % (wid, len(way_details) - 1))\n",
+    "    for e in way_details:\n",
+    "        if e[\"type\"] == \"node\":\n",
+    "            lat[e[\"data\"][\"id\"]] = e[\"data\"][\"lat\"]\n",
+    "            lon[e[\"data\"][\"id\"]] = e[\"data\"][\"lon\"]\n",
+    "        if e[\"type\"] == \"way\":\n",
+    "            assert e[\"data\"][\"id\"] == wid, \"Way id mismatch! %d != %d\" % (e[\"data\"][\"id\"], wl[0])\n",
+    "            ordered_node_array = e[\"data\"][\"nd\"]\n",
+    "            if prev_last_node != -1 and ordered_node_array[-1] == prev_last_node:\n",
+    "                print(\"LAST entry %d matches prev_last_node %d, REVERSING order for %d\" %\n",
+    "                      (ordered_node_array[-1], prev_last_node, wid))\n",
+    "                ordered_node_array = list(reversed(ordered_node_array))\n",
+    "            for on in ordered_node_array:\n",
+    "                coords_list.append([lon[on], lat[on]])\n",
+    "    return ordered_node_array, coords_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "on_list, coords_list = get_coords_for_way(27422567)\n",
+    "on_list[-1], coords_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "on_list, coords_list = get_coords_for_way(367132251, 65477623)\n",
+    "on_list[-1], coords_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "on_list, coords_list = get_coords_for_way(367132252, 65477686)\n",
+    "on_list[-1], coords_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "on_list, coords_list = get_coords_for_way(32315631, 3710856959)\n",
+    "on_list[-1], coords_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_coords_for_relation(rid, start_node, end_node):\n",
+    "    relation_details = osm.RelationGet(rid)\n",
+    "    wl = get_way_list(relation_details)\n",
+    "    print(\"Relation %d mapped to %d ways\" % (rid, len(wl)))\n",
+    "    coords_list = []\n",
+    "    on_list = []\n",
+    "    prev_last_node = -1\n",
+    "    for wid in wl:\n",
+    "        w_on_list, w_coords_list = get_coords_for_way(wid, prev_last_node)\n",
+    "        on_list.extend(w_on_list)\n",
+    "        coords_list.extend(w_coords_list)\n",
+    "        prev_last_node = w_on_list[-1]\n",
+    "        print(\"After adding %d entries from wid %d, curr count = %d\" % (len(w_on_list), wid, len(coords_list)))\n",
+    "    start_index = on_list.index(start_node)\n",
+    "    end_index = on_list.index(end_node)\n",
+    "    assert start_index <= end_index, \"Start index %d is before end %d\" % (start_index, end_index)\n",
+    "    return coords_list[start_index:end_index+1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_coords_on_map(route_coords):\n",
+    "    curr_map = folium.Map()\n",
+    "    latlng_route_coords = [lonlat_swap(rc) for rc in route_coords]\n",
+    "    pl = folium.PolyLine(latlng_route_coords)\n",
+    "    pl.add_to(curr_map)\n",
+    "    for i, c in enumerate(latlng_route_coords):\n",
+    "        folium.CircleMarker(c, radius=5, popup=\"%d: %s\" % (i, c)).add_to(curr_map)\n",
+    "    curr_map.fit_bounds(pl.get_bounds()) \n",
+    "    return curr_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BART from Millbrae to Richmond\n",
+    "# route_coords = get_coords_for_relation(2851613, 6138188702, 65409922)\n",
+    "# show_coords_on_map(route_coords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Caltrain from San Jose to San Francisco\n",
+    "route_coords = get_coords_for_relation(9605483, 65409922, 6138188702)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# on_list.index(65409922), on_list.index(6138188702)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# on_list[650:850]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [(650+i, r) for i, r in enumerate(route_coords[650:850])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# route_coords = route_coords[309:708+1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_coords_on_map(route_coords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lonlat_swap(lon_lat):\n",
+    "    return list(reversed(lon_lat))"
    ]
   },
   {
