Add one more route specification method
If we have access to an API-based trip planner, for the region of interest,
we can call it manually for any kind of trip and then put the resulting
polyline directly into the spec file. In this case, the conversion is trivial,
as all we have to do is to decode the polyline.

TODO: Should we just use polylines for the specs? Will certainly make them be
shorter.

Also support using CAR to get BUS routes, since OSM relation data for bus
routes is spotty.
https://gis.stackexchange.com/questions/329249/how-to-convert-an-osm-relation-to-a-list-of-lat-lng-points

Barring dedicated bus lanes or BRT, buses travel on regular
roads, so we can potentially use driving directions to find the appropriate
route.

+ handle the two new modes (relation and polyline) in the validation since they
don't have associated waypoints
+ add a new notebook to make it easier to create ground truth for the various
legs interactively

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec_to_validate = json.load(open(\"evaluation.spec.filled.json\"))\n",
+    "spec_to_validate = json.load(open(\"many_unimodal_trips_southbay.filled.json\"))\n",
     "sensing_configs = json.load(open(\"sensing_regimes.all.specs.json\"))"
    ]
   },
@@ -161,11 +161,13 @@
     "                  popup=\"Start: %s\" % trip[\"start_loc\"][\"name\"]).add_to(curr_map)\n",
     "    folium.Marker(curr_end, icon=folium.Icon(color=\"red\"),\n",
     "                  popup=\"End: %s\" % trip[\"end_loc\"][\"name\"]).add_to(curr_map)\n",
-    "    for i, wpc in enumerate(trip[\"waypoint_coords\"]):\n",
-    "        folium.map.Marker(\n",
-    "            lonlat_swap(wpc), popup=\"%d\" % i,\n",
-    "            icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
-    "\n",
+    "    # trips from relations won't have waypoints\n",
+    "    if \"waypoint_coords\" in trip:\n",
+    "        for i, wpc in enumerate(trip[\"waypoint_coords\"]):\n",
+    "            folium.map.Marker(\n",
+    "                lonlat_swap(wpc), popup=\"%d\" % i,\n",
+    "                icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
+    "    print(\"Found %d coordinates for the route\" % (len(trip[\"route_coords\"])))\n",
     "    latlng_route_coords = [lonlat_swap(rc) for rc in trip[\"route_coords\"]]\n",
     "    folium.PolyLine(latlng_route_coords,\n",
     "                    popup=\"%s: %s\" % (trip[\"mode\"], trip[\"name\"])).add_to(curr_map)\n",
