Minor tweaks commenting out verbose experimental code in the exploratory notebook

--- a/spec_creation/coordinate_autofill_experiments/Evaluation_Spec_Experiments_OSM_Overpass.ipynb
+++ b/spec_creation/coordinate_autofill_experiments/Evaluation_Spec_Experiments_OSM_Overpass.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# Get a node\n",
-    "relation_details = osm.RelationGet(2851613); relation_details"
+    "relation_details = osm.RelationGet(8094017); relation_details"
    ]
   },
   {
@@ -92,6 +92,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "wl = get_way_list(osm.RelationGet(8094017))\n",
+    "idx = wl.index(52869637); idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wl[74:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# way details is an array of n-1 node entries followed by a way entry\n",
     "# the way entry has an \"nd\" field which is an array of node ids in the correct order\n",
     "# the n-1 node entries are not necessarily in the correct order but provide the id -> lat,lng mapping\n",
@@ -108,6 +127,7 @@
     "        if e[\"type\"] == \"way\":\n",
     "            assert e[\"data\"][\"id\"] == wid, \"Way id mismatch! %d != %d\" % (e[\"data\"][\"id\"], wl[0])\n",
     "            ordered_node_array = e[\"data\"][\"nd\"]\n",
+    "            print(\"Comparing %d and %d\" % (prev_last_node, ordered_node_array[-1]))\n",
     "            if prev_last_node != -1 and ordered_node_array[-1] == prev_last_node:\n",
     "                print(\"LAST entry %d matches prev_last_node %d, REVERSING order for %d\" %\n",
     "                      (ordered_node_array[-1], prev_last_node, wid))\n",
@@ -123,8 +143,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "on_list, coords_list = get_coords_for_way(27422567)\n",
-    "on_list[-1], coords_list"
+    "# on_list, coords_list = get_coords_for_way(27422567)\n",
+    "# on_list[-1], coords_list"
    ]
   },
   {
@@ -133,8 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "on_list, coords_list = get_coords_for_way(367132251, 65477623)\n",
-    "on_list[-1], coords_list"
+    "# on_list, coords_list = get_coords_for_way(367132251, 65477623)\n",
+    "# on_list[-1], coords_list"
    ]
   },
   {
@@ -143,8 +163,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "on_list, coords_list = get_coords_for_way(367132252, 65477686)\n",
-    "on_list[-1], coords_list"
+    "# on_list, coords_list = get_coords_for_way(367132252, 65477686)\n",
+    "# on_list[-1], coords_list"
    ]
   },
   {
@@ -153,8 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "on_list, coords_list = get_coords_for_way(32315631, 3710856959)\n",
-    "on_list[-1], coords_list"
+    "# on_list, coords_list = get_coords_for_way(32315631, 3710856959)\n",
+    "# on_list[-1], coords_list"
    ]
   },
   {
@@ -188,6 +208,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "coords_list = []\n",
+    "on_list = []\n",
+    "prev_last_node = -1\n",
+    "for wid in wl[]:\n",
+    "    w_on_list, w_coords_list = get_coords_for_way(wid, prev_last_node)\n",
+    "    on_list.extend(w_on_list)\n",
+    "    coords_list.extend(w_coords_list)\n",
+    "    prev_last_node = w_on_list[-1]\n",
+    "    print(\"After adding %d entries from wid %d, curr count = %d\" % (len(w_on_list), wid, len(coords_list)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def show_coords_on_map(route_coords):\n",
     "    curr_map = folium.Map()\n",
     "    latlng_route_coords = [lonlat_swap(rc) for rc in route_coords]\n",
@@ -197,6 +234,15 @@
     "        folium.CircleMarker(c, radius=5, popup=\"%d: %s\" % (i, c)).add_to(curr_map)\n",
     "    curr_map.fit_bounds(pl.get_bounds()) \n",
     "    return curr_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_coords_on_map(coords_list)"
    ]
   },
   {
@@ -219,7 +265,7 @@
    "outputs": [],
    "source": [
     "# Caltrain from San Jose to San Francisco\n",
-    "route_coords = get_coords_for_relation(9605483, 65409922, 6138188702)"
+    "route_coords = get_coords_for_relation(8094017, 5020708467, 5465520388)"
    ]
   },
   {
