Support multi-modal trips
In particular, each trip can have multiple legs which can have separate modes
Change the autofill code to fill in legs instead of trips
Change the validation code to display legs instead of trips
Change the "many unimodal" trip to Berkeley to be truly multi-modal

Related phone changes are at https://github.com/e-mission/e-mission-phone/commit/d63dcf044afa9c0207db95831a39a8a56efe8024 and https://github.com/e-mission/e-mission-phone/commit/faf05e56f7315b53dd471e92164433eb88298a12

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec_to_validate = json.load(open(\"many_unimodal_trips_southbay.filled.json\"))\n",
+    "spec_to_validate = json.load(open(\"multimodal_trip_mtv_ucb.filled.json\"))\n",
     "sensing_configs = json.load(open(\"sensing_regimes.all.specs.json\"))"
    ]
   },
@@ -184,10 +184,19 @@
    "outputs": [],
    "source": [
     "evaluation_trips = spec_to_validate[\"evaluation_trips\"]\n",
-    "rows = get_row_count(len(evaluation_trips), 2)\n",
+    "map_list = []\n",
+    "for t in evaluation_trips:\n",
+    "    if \"legs\" in t:\n",
+    "        for l in t[\"legs\"]:\n",
+    "            curr_map = get_map_for_evaluation_trip(l)\n",
+    "            map_list.append(curr_map)\n",
+    "    else:\n",
+    "        curr_map = get_map_for_evaluation_trip(t)\n",
+    "        map_list.append(curr_map)\n",
+    "\n",
+    "rows = get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure()\n",
-    "for i, t in enumerate(evaluation_trips):\n",
-    "    curr_map = get_map_for_evaluation_trip(t)\n",
+    "for i, curr_map in enumerate(map_list):\n",
     "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)\n",
     "evaluation_maps"
    ]
