--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -25,6 +25,7 @@
    "source": [
     "import folium\n",
     "import folium.features as fof\n",
+    "import folium.utilities as ful\n",
     "import branca.element as bre\n",
     "import json\n",
     "import geojson as gj\n",
@@ -55,6 +56,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_marker(loc, disp_color):\n",
+    "    if loc[\"geometry\"][\"type\"] == \"Point\":\n",
+    "        curr_latlng = lonlat_swap(loc[\"geometry\"][\"coordinates\"])\n",
+    "        return folium.Marker(curr_latlng, icon=folium.Icon(color=disp_color),\n",
+    "                  popup=\"%s\" % loc[\"properties\"][\"name\"])\n",
+    "    elif loc[\"geometry\"][\"type\"] == \"Polygon\":\n",
+    "        curr_latlng = [lonlat_swap(c) for c in loc[\"geometry\"][\"coordinates\"]]\n",
+    "        return folium.Polygon(curr_latlng, color=disp_color,\n",
+    "                  popup=\"%s\" % loc[\"properties\"][\"name\"])        "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec_to_validate = json.load(open(\"multimodal_trip_mtv_ucb.filled.json\"))\n",
+    "spec_to_validate = json.load(open(\"unimodal_roundtrip.filled.json\"))\n",
     "sensing_configs = json.load(open(\"sensing_regimes.all.specs.json\"))"
    ]
   },
@@ -155,12 +173,8 @@
    "source": [
     "def get_map_for_evaluation_trip(trip):\n",
     "    curr_map = folium.Map()\n",
-    "    curr_start = lonlat_swap(trip[\"start_loc\"][\"coordinates\"])\n",
-    "    curr_end = lonlat_swap(trip[\"end_loc\"][\"coordinates\"])\n",
-    "    folium.Marker(curr_start, icon=folium.Icon(color=\"green\"),\n",
-    "                  popup=\"Start: %s\" % trip[\"start_loc\"][\"name\"]).add_to(curr_map)\n",
-    "    folium.Marker(curr_end, icon=folium.Icon(color=\"red\"),\n",
-    "                  popup=\"End: %s\" % trip[\"end_loc\"][\"name\"]).add_to(curr_map)\n",
+    "    get_marker(trip[\"start_loc\"], \"green\").add_to(curr_map)\n",
+    "    get_marker(trip[\"end_loc\"], \"red\").add_to(curr_map)\n",
     "    # trips from relations won't have waypoints\n",
     "    if \"waypoint_coords\" in trip:\n",
     "        for i, wpc in enumerate(trip[\"waypoint_coords\"]):\n",
@@ -168,12 +182,12 @@
     "                lonlat_swap(wpc), popup=\"%d\" % i,\n",
     "                icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
     "    print(\"Found %d coordinates for the route\" % (len(trip[\"route_coords\"])))\n",
-    "    latlng_route_coords = [lonlat_swap(rc) for rc in trip[\"route_coords\"]]\n",
+    "    latlng_route_coords = [lonlat_swap(rc) for rc in trip[\"route_coords\"][\"geometry\"][\"coordinates\"]]\n",
     "    folium.PolyLine(latlng_route_coords,\n",
     "                    popup=\"%s: %s\" % (trip[\"mode\"], trip[\"name\"])).add_to(curr_map)\n",
     "    for i, c in enumerate(latlng_route_coords):\n",
     "        folium.CircleMarker(c, radius=5, popup=\"%d: %s\" % (i, c)).add_to(curr_map)\n",
-    "    curr_map.fit_bounds([curr_start, curr_end])    \n",
+    "    curr_map.fit_bounds(ful.get_bounds(trip[\"route_coords\"][\"geometry\"][\"coordinates\"], lonlat=True))    \n",
     "    return curr_map"
    ]
   },
