Support polygons for the start and the end of the trips
Since these already use polylines we only needed to change the marker
representation but not actually change the generation code. Will need to do
that for OSRM in the future though

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -67,8 +67,11 @@
     "        return folium.Marker(curr_latlng, icon=folium.Icon(color=disp_color),\n",
     "                  popup=\"%s\" % loc[\"properties\"][\"name\"])\n",
     "    elif loc[\"geometry\"][\"type\"] == \"Polygon\":\n",
-    "        curr_latlng = [lonlat_swap(c) for c in loc[\"geometry\"][\"coordinates\"]]\n",
-    "        return folium.Polygon(curr_latlng, color=disp_color,\n",
+    "        assert len(loc[\"geometry\"][\"coordinates\"]) == 1,\\\n",
+    "            \"Only simple polygons supported!\"\n",
+    "        curr_latlng = [lonlat_swap(c) for c in loc[\"geometry\"][\"coordinates\"][0]]\n",
+    "        print(\"Returning polygon for %s\" % curr_latlng)\n",
+    "        return folium.PolyLine(curr_latlng, color=disp_color, fill=disp_color,\n",
     "                  popup=\"%s\" % loc[\"properties\"][\"name\"])        "
    ]
   },
